--- a/playbook.yml
+++ b/playbook.yml
@@ -1,27 +1,27 @@
-- name: Install GO
+- name: deploy-golang-application
   hosts: test1
   become: yes
   become_user: admin
   tasks:
-    - name: Install GO
+    - name: apt-golang
       apt: 
         name: golang
         state: latest
-    - name: Install git
+    - name: apt-git
       apt:
         name: git
         state: latest
-    - name: Pull from git
+    - name: pull-app
       git:
         repo: git@github.com:sergodk/goservice.git
         dest: goservice/
         force: yes
         update: yes
-    - name: Build golang application
+    - name: build-app
       ansible.builtin.shell:
         cmd: go build main.go
         chdir: goservice/
-    - name: RUN APPLICATION
+    - name: run-app
       ansible.builtin.shell:
         cmd: ./main
         chdir: goservice/
